# web-agents-public

./: .clang-format  .git-blame-ignore-revs  .pre-commit-config.yaml  CMakeLists.txt  Makefile  Makefile.aix.mk  Makefile.linux.mk  Makefile.macos.mk  Makefile.solaris.mk  Makefile.windows.mk  README.md  build.xml  build_agent.xml  make_dependencies.sh  webagents.properties
.github/: FUNDING.yml
.github/workflows/: build.yml
config/: agent.conf.template  agent.vcl.template
integration/: README  alloc.c  alloc.h  bad.sh  cache.c  cache.h  makefile  makefile.win  run_cache.sh  rwlock.c  rwlock.h  share.c  share.h  test_alloc.c  test_cache.c  test_rwlock.c
source/: admin.c  admin_iis.c  agent_cache.c  agent_cache.h  alloc.c  alloc.h  am.h  audit.c  cache.c  cache.h  cache_data.c  cache_object.c  config.c  config.h  config_file.c  config_xml.c  error.h  http_parser.c  http_parser.h  init.c  ip.c  list.h  log.c  log.h  naming_valid.c  net_client.c  net_client.h  net_client_ssl.c  net_client_win.c  net_ops.c  platform.h  policy.c  policy_xml.c  process.c  property_map.c  rwlock.c  rwlock.h  session_cache.c  session_saml.c  session_xml.c  (+10 more)
source/apache/: agent.c  agent.xlc.exp
source/iis/: agent.c
source/unit_tests/: test_utility.c
source/varnish/: agent.c  agent.map  remap_64.s  vcc_if.c  vcc_if.h  vmod_am.vcc
source/varnish3/: agent.c  agent.map  remap_64.s  vcc_if.c  vcc_if.h  vmod_am.vcc
tests/: CMakeLists.txt  README  mh.sh  mm.sh  test_MAIN.c  test_audit.c  test_config.c  test_exits.c  test_exits.h  test_init.c  test_log.c  test_log.h  test_logging.c  test_network.c  test_notenforced_lists.c  test_notenforced_lists.h  test_notifications.c  test_notifications.h  test_policy.c  test_policy_cache.c  test_policy_cache.h  test_setup_requests.c  test_setup_requests.h  test_utility.c  test_utility.h
