# SPDX-License-Identifier: CDDL-1.0
#
# Copyright 2018-2026 Open Identity Platform Community.

# -----------------------------------------------------------------------------
# cmocka — look up via pkg-config first, then the CMake config module
# -----------------------------------------------------------------------------

pkg_check_modules(CMOCKA IMPORTED_TARGET cmocka)
if(NOT CMOCKA_FOUND)
    find_package(cmocka QUIET)
endif()

if(NOT CMOCKA_FOUND AND NOT cmocka_FOUND)
    message(WARNING "cmocka not found — unit tests will not be built. "
                    "Install libcmocka-dev / libcmocka-devel / cmocka.")
    return()
endif()

# -----------------------------------------------------------------------------
# Test source files
# -----------------------------------------------------------------------------

set(TEST_SOURCES
    test_audit.c
    test_config.c
    test_exits.c
    test_init.c
    test_logging.c
    test_network.c
    test_notenforced_lists.c
    test_notifications.c
    test_policy.c
    test_policy_cache.c
    test_setup_requests.c
    test_utility.c)

# -----------------------------------------------------------------------------
# Generate tests.h by scanning for `void test_*(void **state)` signatures.
#
# Replaces the old sed pipeline. Runs at configure time, so adding a new
# test function requires re-running `cmake` (or just `cmake --build`, which
# will notice the dependency via the CONFIGURE_DEPENDS below).
# -----------------------------------------------------------------------------

set(TEST_DECLS "")
set(TEST_ENTRIES "")
set(_n_tests 0)

foreach(src IN LISTS TEST_SOURCES)
    file(READ ${CMAKE_CURRENT_SOURCE_DIR}/${src} _contents)
    # Match "void test_name(void** state)" at the start of a line (i.e. not
    # preceded by "static"). Tests declared `static` aren't reachable from
    # test_MAIN.c's generated tests[] array, so including them would break
    # the link.
    string(REGEX MATCHALL
        "(^|\n)[ \t]*void[ \t]+test_[A-Za-z0-9_]+[ \t]*\\([ \t]*void[ \t]*\\*[ \t]*\\*[ \t]*state[ \t]*\\)"
        _matches "${_contents}")
    foreach(_m IN LISTS _matches)
        string(REGEX MATCH "test_[A-Za-z0-9_]+" _fname "${_m}")
        # Build up strings directly (not lists) — CMake lists use ; as the
        # separator, which collides with C's statement terminator.
        string(APPEND TEST_DECLS   "void ${_fname}(void **state);\n")
        string(APPEND TEST_ENTRIES "    cmocka_unit_test(${_fname}),\n")
        math(EXPR _n_tests "${_n_tests} + 1")
    endforeach()
endforeach()

message(STATUS "Discovered ${_n_tests} unit test functions across ${TEST_SOURCES}")

set(_tests_h "${CMAKE_CURRENT_BINARY_DIR}/tests.h")
file(WRITE ${_tests_h}
"/* Auto-generated by CMake. Do not edit. */
#ifndef TESTS_H
#define TESTS_H

#include <setjmp.h>
#include <stdarg.h>
#include <stddef.h>
#include <cmocka.h>

${TEST_DECLS}
static const struct CMUnitTest tests[] = {
${TEST_ENTRIES}};

#endif /* TESTS_H */
")

# -----------------------------------------------------------------------------
# Test executable
# -----------------------------------------------------------------------------

add_executable(run_tests
    test_MAIN.c
    ${TEST_SOURCES}
    # Some internal helpers in the core library (e.g. remove_pathinfo_from_url,
    # extract_audit_entries) are declared `static` in production builds via
    #     #ifndef UNIT_TEST
    #     static
    #     #endif
    # Tests need to call them directly, so we compile those source files a
    # second time here *with* UNIT_TEST defined. The UNIT_TEST flag below
    # only applies to targets in this directory, so the production libopenam
    # still gets the static versions.
    ${CMAKE_SOURCE_DIR}/source/audit.c
    ${CMAKE_SOURCE_DIR}/source/process.c)

target_include_directories(run_tests PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR})

target_compile_definitions(run_tests PRIVATE UNIT_TEST)

target_link_libraries(run_tests PRIVATE openam)

if(TARGET PkgConfig::CMOCKA)
    target_link_libraries(run_tests PRIVATE PkgConfig::CMOCKA)
elseif(TARGET cmocka::cmocka)
    target_link_libraries(run_tests PRIVATE cmocka::cmocka)
else()
    target_link_libraries(run_tests PRIVATE cmocka)
endif()

add_test(NAME unit_tests COMMAND run_tests)
set_tests_properties(unit_tests PROPERTIES
    TIMEOUT 120
    ENVIRONMENT "CMOCKA_MESSAGE_OUTPUT=STDOUT")
